# MLPilot

./: .gitignore  AGENTS.md  CLAUDE.md  CONTINUATION_M7_V1.md  PRD.md  README.md  milestones.md  package-lock.json  package.json  sample.csv  sample_regression.csv  skills-lock.json
_qa/: package-lock.json  package.json  shoot.js
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/routers/: datasets.py  downloads.py  run.py  runs.py  stream.py
apps/api/app/core/: config.py  exceptions.py  io.py  logging.py  ml.py  profiling.py  run_store.py  stats.py
apps/api/app/schemas/: dataset.py  profile.py  run.py
apps/web/: astro.config.mjs  components.json  openapi-ts.config.ts  package-lock.json  package.json
apps/web/src/components/: DatasetProfile.tsx  DatasetProfileView.tsx  HeroParallax.tsx  Navbar.astro  ThemeToggle.tsx
apps/web/src/components/charts/: ChartTooltip.tsx  ClassDistribution.tsx  ConfusionMatrix.tsx  CorrelationHeatmap.tsx  EvaluationCharts.tsx  PredVsActual.tsx  ResidualPlot.tsx  RocCurve.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  spinner.tsx  table.tsx
apps/web/src/hooks/: useAnimatedExit.ts  useGsapStagger.ts
apps/web/src/islands/: DatasetUploader.tsx  ReportsList.tsx  SettingsDialogDemo.tsx  Workspace.tsx
apps/web/src/layouts/: AppLayout.astro  Layout.astro
apps/web/src/lib/: format.ts  motion.ts
apps/web/src/pages/: 404.astro  dashboard.astro  index.astro  reports.astro  settings.astro  upload.astro
apps/web/src/styles/: globals.css
docs/: README.md
(+15 files in other folders)
