[project]
name = "automl-api"
version = "0.1.0"
description = "AutoML Studio API (FastAPI ML pipeline backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.12",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "reportlab>=4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
